--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--  A-Frame (https://github.com/aframevr/aframe)
           Copyright © 2015-2017 A-Frame authors.
           MIT License (https://github.com/aframevr/aframe/blob/master/LICENSE)  -->
-    <script src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
     <!--  Exif.js (https://github.com/exif-js/exif-js)
           Copyright (c) 2008 Jacob Seidelin
           MIT License (https://github.com/exif-js/exif-js/blob/master/LICENSE.md)
@@ -27,7 +27,18 @@
         <a-camera position="0 0 0" look-controls="reverseMouseDrag: true" wasd-controls-enabled="false"></a-camera>
     </a-entity>
     <a-text id="loadingText" position="0 0 -1" width="3" value="Loading..." align="center" visible="true"></a-text>
-    <a-text id="usageText" position="0 0 -1" width="2" value="Double-click(tap)\nto select a photo." align="center" visible="false"></a-text>
+    <a-text id="usageText"
+        position="0 0 -1"
+        width="2"
+        value="Double-click(tap)
+or drag and drop a file
+to select a photo.
+
+You can hit Space
+to recenter in VR mode"
+        align="center"
+        visible="false"
+    ></a-text>
 </a-scene>
 </body>
 </html>
