Add more controls

--- a/index.html
+++ b/index.html
@@ -30,12 +30,17 @@
     <a-text id="usageText"
         position="0 0 -1"
         width="2"
-        value="Double-click(tap)
+        value="Double-click/tap
 or drag and drop a file
 to select a photo.
 
-You can hit Space
-to recenter in VR mode"
+Hit Space to
+recenter horizontally
+in VR mode
+
+Scroll to zoom,
+Arrow up/down to
+rotate image vertically"
         align="center"
         visible="false"
     ></a-text>
